@@ -1,5 +1,10 @@
 2008-10-10  Wakaba  <wakaba@suika.fam.cx>
 
+	* wttjs.pl: Don't execute a test if it is known a priori to crash
+	the browser.
+
+2008-10-10  Wakaba  <wakaba@suika.fam.cx>
+
 	* wttjs.pl: Skip a test if it tries to get an instance of the
 	interface and then fails, since the purpose of the test is not
 	determining whether the browser implements a way to instantiate
